Fixed Character and Integer deprecation