@@ -9,10 +9,10 @@ public class HashTableOne
 	{
 		Object[] hashTable = new Object[10];
 		
-		Character c = new Character('1');
+		Character c = '1';
 		hashTable[c.hashCode()%10] = c;
 		
-		Integer num = new Integer(113);		//boxing up the int the long way
+		Integer num = Integer.valueOf(113);		//boxing up the int the long way
 		hashTable[num.hashCode()%10] = num;
 		
 		String s = "e";		
