@@ -15,28 +15,28 @@ public class HashTableThree
 			hashTable[i] = new LinkedList();
 		}
 		
-		Character c = new Character('1');
+		Character c = '1';
 		hashTable[c.hashCode()%10].add(c);
 		
-		c = new Character('d');
+		c = 'd';
 		hashTable[c.hashCode()%10].add(c);		
 		
-		c = new Character('c');
+		c = 'c';
 		hashTable[c.hashCode()%10].add(c);		
 		
-		c = new Character('B');
+		c = 'B';
 		hashTable[c.hashCode()%10].add(c);   
 		
 		Integer num = 45;		//autoboxing
 		hashTable[num.hashCode()%10].add(num);
 		
-		num = new Integer(113);		//boxing up the int the long way
+		num = Integer.valueOf(113);		//boxing up the int the long way
 		hashTable[num.hashCode()%10].add(num);
 		
-		num = new Integer(263);		//boxing up the int the long way
+		num = Integer.valueOf(263);		//boxing up the int the long way
 		hashTable[num.hashCode()%10].add(num);		
 		
-		num = new Integer(783);		//boxing up the int the long way
+		num = Integer.valueOf(783);		//boxing up the int the long way
 		hashTable[num.hashCode()%10].add(num);			
 		
 		String s = "e";		
